Fix SVG alignment in Input Group without breaking layout

--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -226,16 +226,11 @@
   min-height: 32px;
   box-shadow: none;
   line-height: 1.5715;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .ui-input-group-addon svg {
-  display: block;
-  width: 1em;
-  height: 1em;
-  flex-shrink: 0;
+  vertical-align: middle;
+  margin-top: -2px;
 }
 
 .ui-input-group-addon:first-child {
